Implements operations in computational graph

--- a/codecamp/deep-learning/forward_pass.ipynb
+++ b/codecamp/deep-learning/forward_pass.ipynb
@@ -10,6 +10,28 @@
     "\n",
     "The final operation is the mean of the tensor, given by torch.mean(your_tensor)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "# Initialize tensors x, y and z\n",
+    "x = torch.rand(1000, 1000)\n",
+    "y = torch.rand(1000, 1000)\n",
+    "z = torch.rand(1000, 1000)\n",
+    "\n",
+    "# Multiply x with y\n",
+    "q = torch.matmul(x, y)\n",
+    "\n",
+    "# Multiply elementwise z with q\n",
+    "f = z * q\n",
+    "\n",
+    "mean_f = torch.mean(f)\n",
+    "print(mean_f)"
+   ]
   }
  ],
  "metadata": {
