--- a/codecamp/deep-learning/forward_pass.ipynb
+++ b/codecamp/deep-learning/forward_pass.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(125.0700)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "# Initialize tensors x, y and z\n",
@@ -44,7 +52,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4
